# android-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  version-bump.yml
src/android_mcp/: adb.py  server.py  ui.py
