[project]
name = "adb-mcp"
version = "0.1.0"
description = "MCP server for controlling Android devices and emulators via ADB"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
android-mcp = "android_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/android_mcp"]
